sync and obj lock status